[gd_scene load_steps=2 format=3 uid="uid://dau658f2m6mw4"]

[ext_resource type="Script" path="res://Gundam project/Code/Dash.gd" id="1_7v5nm"]

[node name="Dash" type="Node2D"]
script = ExtResource("1_7v5nm")

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.02

[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_ghost_timer_timeout"]
